--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11 µs, sys: 0 ns, total: 11 µs\n",
-      "Wall time: 13.8 µs\n"
+      "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
+      "Wall time: 11 µs\n"
      ]
     }
    ],
@@ -467,8 +467,8 @@
    "source": [
     "# execução do classificador DecisionTreeClassifier\n",
     "\n",
-    "classificador_arvore_decisao = tree.DecisionTreeClassifier()\n",
-    "y_pred_arvore_decisao = executar_classificador(classificador_arvore_decisao, X_train, X_test, y_train)"
+    "# classificador_arvore_decisao = tree.DecisionTreeClassifier()\n",
+    "# y_pred_arvore_decisao = executar_classificador(classificador_arvore_decisao, X_train, X_test, y_train)"
    ]
   },
   {
@@ -514,8 +514,8 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "[[28416    16]\n",
-      " [   12    37]]\n"
+      "[[28418    14]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -559,9 +559,9 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "0.6981132075471698\n",
-      "[[28416    16]\n",
-      " [   12    37]]\n"
+      "0.7142857142857143\n",
+      "[[28418    14]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -599,10 +599,10 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "0.6981132075471698\n",
-      "0.7551020408163265\n",
-      "[[28416    16]\n",
-      " [   12    37]]\n"
+      "0.7142857142857143\n",
+      "0.7142857142857143\n",
+      "[[28418    14]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -716,6 +716,49 @@
       "0.7551020408163265\n",
       "[[28426     6]\n",
       " [   12    37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validação da árvore de decisão\n",
+    "\n",
+    "validar_arvore(y_test, y_pred_arvore_decisao)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 04.02 Aprendendo o que são os modelos ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# execução do classificador DecisionTreeClassifier com depth = 5\n",
+    "\n",
+    "classificador_arvore_decisao = tree.DecisionTreeClassifier(max_depth=5, random_state=0)\n",
+    "y_pred_arvore_decisao = executar_classificador(classificador_arvore_decisao, X_train, X_test, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999403110845827\n",
+      "0.9210526315789473\n",
+      "0.7142857142857143\n",
+      "[[28429     3]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
