--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -769,6 +769,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 04.03 Entendendo a técnica Bagging e o Random Forest"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Bagging* é uma técnica de *ensemble learning*, que é muito popular principalmente por causa do algoritmo random forest. O *bagging* significa *bootstrapping aggregating*. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
