--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
-      "Wall time: 11 µs\n"
+      "CPU times: user 15 µs, sys: 0 ns, total: 15 µs\n",
+      "Wall time: 19.3 µs\n"
      ]
     }
    ],
@@ -514,8 +514,8 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "[[28418    14]\n",
-      " [   14    35]]\n"
+      "[[28417    15]\n",
+      " [   13    36]]\n"
      ]
     }
    ],
@@ -559,9 +559,9 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "0.7142857142857143\n",
-      "[[28418    14]\n",
-      " [   14    35]]\n"
+      "0.7058823529411765\n",
+      "[[28417    15]\n",
+      " [   13    36]]\n"
      ]
     }
    ],
@@ -599,10 +599,10 @@
      "output_type": "stream",
      "text": [
       "0.9990168884519505\n",
-      "0.7142857142857143\n",
-      "0.7142857142857143\n",
-      "[[28418    14]\n",
-      " [   14    35]]\n"
+      "0.7058823529411765\n",
+      "0.7346938775510204\n",
+      "[[28417    15]\n",
+      " [   13    36]]\n"
      ]
     }
    ],
@@ -651,8 +651,18 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 18.4 s, sys: 19.7 ms, total: 18.4 s\n",
+      "Wall time: 18.4 s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "# execução do classificador DecisionTreeClassifier\n",
     "\n",
     "classificador_arvore_decisao = tree.DecisionTreeClassifier(max_depth=10, random_state=0)\n",
@@ -735,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -785,11 +795,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 04.04 Executando o Random Forest com o scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8.94 s, sys: 119 µs, total: 8.94 s\n",
+      "Wall time: 8.97 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "classificador_random_forest = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "y_pred_random_forest = executar_classificador(classificador_random_forest, X_train, X_test, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999403110845827\n",
+      "0.9210526315789473\n",
+      "0.7142857142857143\n",
+      "[[28429     3]\n",
+      " [   14    35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "validar_arvore(y_test, y_pred_random_forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 9.32 s, sys: 136 ms, total: 9.45 s\n",
+      "Wall time: 10.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "classificador_random_forest = RandomForestClassifier(n_estimators=50, random_state=0, max_depth=10)\n",
+    "y_pred_random_forest = executar_classificador(classificador_random_forest, X_train, X_test, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999403110845827\n",
+      "0.9210526315789473\n",
+      "0.7142857142857143\n",
+      "[[28429     3]\n",
+      " [   14    35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "validar_arvore(y_test, y_pred_random_forest)"
+   ]
   }
  ],
  "metadata": {
