--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15 µs, sys: 0 ns, total: 15 µs\n",
-      "Wall time: 19.3 µs\n"
+      "CPU times: user 10 µs, sys: 0 ns, total: 10 µs\n",
+      "Wall time: 12.6 µs\n"
      ]
     }
    ],
@@ -513,8 +513,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990168884519505\n",
-      "[[28417    15]\n",
+      "0.9989817773252344\n",
+      "[[28416    16]\n",
       " [   13    36]]\n"
      ]
     }
@@ -558,9 +558,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990168884519505\n",
-      "0.7058823529411765\n",
-      "[[28417    15]\n",
+      "0.9989817773252344\n",
+      "0.6923076923076923\n",
+      "[[28416    16]\n",
       " [   13    36]]\n"
      ]
     }
@@ -598,10 +598,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990168884519505\n",
-      "0.7058823529411765\n",
+      "0.9989817773252344\n",
+      "0.6923076923076923\n",
       "0.7346938775510204\n",
-      "[[28417    15]\n",
+      "[[28416    16]\n",
       " [   13    36]]\n"
      ]
     }
@@ -656,8 +656,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.4 s, sys: 19.7 ms, total: 18.4 s\n",
-      "Wall time: 18.4 s\n"
+      "CPU times: user 10.3 s, sys: 11 µs, total: 10.3 s\n",
+      "Wall time: 10.3 s\n"
      ]
     }
    ],
@@ -804,15 +804,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.94 s, sys: 119 µs, total: 8.94 s\n",
-      "Wall time: 8.97 s\n"
+      "CPU times: user 5.28 s, sys: 0 ns, total: 5.28 s\n",
+      "Wall time: 5.29 s\n"
      ]
     }
    ],
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -847,15 +847,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.32 s, sys: 136 ms, total: 9.45 s\n",
-      "Wall time: 10.4 s\n"
+      "CPU times: user 5.3 s, sys: 0 ns, total: 5.3 s\n",
+      "Wall time: 5.3 s\n"
      ]
     }
    ],
@@ -887,6 +887,27 @@
    "source": [
     "validar_arvore(y_test, y_pred_random_forest)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.02 Entendendo a técnica boosting e o AdaBoost"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A técnica *boosting*, diferentemente da técnica *bagging* que se baseava em gerar modelos independentes, ou seja, árvores independentes umas das outras e a ideia era que elas fossem mais independentes possíveis. Na técnica *boosting* nós geramos árvores que se completam, ou seja, uma depende da outra. No geral, ela forma um modelo sequencial. Dentro da técnica *boosting* temos um algoritmo que é bem famoso, que eu o **AdaBoost**, “ada” vem de adaptativo. Ou seja, toda vez que uma nova árvore é gerada, ela vai tentar corrigir os erros que a árvore anterior fez, então a ideia é que nós vamos gerando um modelo sequencial de forma que um depende do outro e que um corrija os erros do anterior, até chegarmos no final e termos um resultado bom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
