--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -905,6 +905,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.03 AdaBoost: calculando a influência da árvore"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Influência da Árvore:\n",
+    "\n",
+    "$\\alpha = \\frac{1}{2}log\\left(\\frac{1-\\textrm{Erro Total}}{\\textrm{Erro Total}}\\right)$"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
