--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -923,6 +923,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.04 AdaBoost: calculando o peso das instâncias"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fórmula também para recalcular esses pesos\n",
+    "\n",
+    "$w_i = w_{i-1} * e^{\\pm \\alpha}$\n",
+    "\n",
+    "$w$ é o peso e $\\alpha$ é a influência da árvore"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
