--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -943,6 +943,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.05 AdaBoost: Reagrupando a base de dados"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora já recalculamos o peso das instâncias. Como vamos utilizar isso na nossa fórmula? Qual é o próximo passo agora? Então vai ser da seguinte maneira: o que vamos fazer é construir uma nova base de dados a partir desta.\n",
+    "\n",
+    "**Ver video da aula para explicação**"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
