--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -392,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10 µs, sys: 0 ns, total: 10 µs\n",
-      "Wall time: 12.6 µs\n"
+      "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
+      "Wall time: 9.3 µs\n"
      ]
     }
    ],
@@ -513,9 +513,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9989817773252344\n",
-      "[[28416    16]\n",
-      " [   13    36]]\n"
+      "0.9990519995786665\n",
+      "[[28419    13]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -558,10 +558,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9989817773252344\n",
-      "0.6923076923076923\n",
-      "[[28416    16]\n",
-      " [   13    36]]\n"
+      "0.9990519995786665\n",
+      "0.7291666666666666\n",
+      "[[28419    13]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -598,11 +598,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9989817773252344\n",
-      "0.6923076923076923\n",
-      "0.7346938775510204\n",
-      "[[28416    16]\n",
-      " [   13    36]]\n"
+      "0.9990519995786665\n",
+      "0.7291666666666666\n",
+      "0.7142857142857143\n",
+      "[[28419    13]\n",
+      " [   14    35]]\n"
      ]
     }
    ],
@@ -656,8 +656,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.3 s, sys: 11 µs, total: 10.3 s\n",
-      "Wall time: 10.3 s\n"
+      "CPU times: user 9.61 s, sys: 0 ns, total: 9.61 s\n",
+      "Wall time: 9.61 s\n"
      ]
     }
    ],
@@ -811,8 +811,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.28 s, sys: 0 ns, total: 5.28 s\n",
-      "Wall time: 5.29 s\n"
+      "CPU times: user 4.9 s, sys: 0 ns, total: 4.9 s\n",
+      "Wall time: 4.9 s\n"
      ]
     }
    ],
@@ -854,8 +854,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.3 s, sys: 0 ns, total: 5.3 s\n",
-      "Wall time: 5.3 s\n"
+      "CPU times: user 5.1 s, sys: 15.9 ms, total: 5.12 s\n",
+      "Wall time: 5.18 s\n"
      ]
     }
    ],
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -961,9 +961,120 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 05.06 Executando o AdaBoost com o scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.83 s, sys: 0 ns, total: 4.83 s\n",
+      "Wall time: 4.83 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "classificador_adaboost = AdaBoostClassifier(random_state=0, n_estimators=100)\n",
+    "y_pred_adaboost = executar_classificador(classificador_adaboost, X_train, X_test, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AdaBoostClassifier' object has no attribute 'estimators_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-cd6d0b1d303b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msalvar_arvore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassificador_adaboost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"adaboost1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msalvar_arvore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassificador_adaboost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"adaboost2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mvalidar_arvore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_adaboost\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'AdaBoostClassifier' object has no attribute 'estimators_'"
+     ]
+    }
+   ],
+   "source": [
+    "salvar_arvore(classificador_adaboost.estimators_[0], \"adaboost1\")\n",
+    "salvar_arvore(classificador_adaboost.estimators_[1], \"adaboost2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999403110845827\n",
+      "0.9210526315789473\n",
+      "0.7142857142857143\n",
+      "[[28429     3]\n",
+      " [   14    35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "validar_arvore(y_test, y_pred_adaboost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.12 s, sys: 3.94 ms, total: 5.12 s\n",
+      "Wall time: 5.12 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "classificador_adaboost = AdaBoostClassifier(random_state=0, n_estimators=200)\n",
+    "y_pred_adaboost = executar_classificador(classificador_adaboost, X_train, X_test, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.999403110845827\n",
+      "0.9210526315789473\n",
+      "0.7142857142857143\n",
+      "[[28429     3]\n",
+      " [   14    35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "validar_arvore(y_test, y_pred_adaboost)"
+   ]
   }
  ],
  "metadata": {
