--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -1,6 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: scikit-learn in /home/yorinori/anaconda3/lib/python3.8/site-packages (1.2.2)\n",
+      "Requirement already satisfied, skipping upgrade: joblib>=1.1.1 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from scikit-learn) (1.2.0)\n",
+      "Requirement already satisfied, skipping upgrade: threadpoolctl>=2.0.0 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from scikit-learn) (2.1.0)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.17.3 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from scikit-learn) (1.18.5)\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=1.3.2 in /home/yorinori/anaconda3/lib/python3.8/site-packages (from scikit-learn) (1.5.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install -U scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: scikit-learn\n",
+      "Version: 1.2.2\n",
+      "Summary: A set of python modules for machine learning and data mining\n",
+      "Home-page: http://scikit-learn.org\n",
+      "Author: None\n",
+      "Author-email: None\n",
+      "License: new BSD\n",
+      "Location: /home/yorinori/anaconda3/lib/python3.8/site-packages\n",
+      "Requires: threadpoolctl, numpy, scipy, joblib\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show scikit-learn"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -10,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +255,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
-      "Wall time: 9.3 µs\n"
+      "Wall time: 10.3 µs\n"
      ]
     }
    ],
@@ -410,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,15 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990519995786665\n",
-      "[[28419    13]\n",
+      "0.9989115550718023\n",
+      "[[28415    17]\n",
       " [   14    35]]\n"
      ]
     }
@@ -535,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990519995786665\n",
-      "0.7291666666666666\n",
-      "[[28419    13]\n",
+      "0.9989115550718023\n",
+      "0.6730769230769231\n",
+      "[[28415    17]\n",
       " [   14    35]]\n"
      ]
     }
@@ -573,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,17 +638,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9990519995786665\n",
-      "0.7291666666666666\n",
+      "0.9989115550718023\n",
+      "0.6730769230769231\n",
       "0.7142857142857143\n",
-      "[[28419    13]\n",
+      "[[28415    17]\n",
       " [   14    35]]\n"
      ]
     }
@@ -622,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -649,15 +696,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.61 s, sys: 0 ns, total: 9.61 s\n",
-      "Wall time: 9.61 s\n"
+      "CPU times: user 10.2 s, sys: 68 µs, total: 10.2 s\n",
+      "Wall time: 10.2 s\n"
      ]
     }
    ],
@@ -671,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -804,15 +851,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.9 s, sys: 0 ns, total: 4.9 s\n",
-      "Wall time: 4.9 s\n"
+      "CPU times: user 5.31 s, sys: 4.07 ms, total: 5.31 s\n",
+      "Wall time: 5.32 s\n"
      ]
     }
    ],
@@ -826,7 +873,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RandomForestClassifier' object has no attribute 'estimators_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-c0522eaabc93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msalvar_arvore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassificador_random_forest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"random_forest1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'RandomForestClassifier' object has no attribute 'estimators_'"
+     ]
+    }
+   ],
+   "source": [
+    "# salvar_arvore(classificador_random_forest.estimators_[0], \"random_forest1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
