Final do curso: Árvores de Decisão - aprofundando em modelos de Machine Learning

--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -1158,6 +1158,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fim do curso."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
